--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Developer Cheat Sheets</h1>
+        <h1>GPT'ed Collection of Developer Cheat Sheets</h1>
         <p class="subtitle">Quick references for automation and load balancing</p>
 	<p>Everything should be markdown. </p>
     </header>
