--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section class="cheatsheets">
             <div class="card">
-                <h2>GitHub Actions Cheat Sheet</h2>
+                <h2>GitHub Actions Cheat Sheet - brought to you by ChatGPT</h2>
                 <p>Learn the basics of CI/CD workflows with GitHub Actions.</p>
                 <a href="github-actions.html" class="btn">View Cheat Sheet</a>
             </div>
