source citations for docker ref sheet

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="card">
-                <h2>HAProxy Setup Cheat Sheet</h2>
+                <h2>HAProxy Setup Cheat Sheet - brought to you by ChatGPT</h2>
                 <p>Quick guide to setting up and configuring HAProxy.</p>
                 <a href="haproxy.html" class="btn">View Cheat Sheet</a>
             </div>
