--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 	    <div class="card">
 		    <h2>Guide to webhooks - COMING SOON!</h2>
-                <p>Filler text here</p>
+		    <p>This will be a guide to using adnanh's webhook</p>
                 <a href="webhooks.html" class="btn">View Cheat Sheet</a>
             </div>
         </section>
